Fix Swatch Overflow issue
When dealing with multiple store views with different languages the swatch input fields become too small to use and they move off the screen with no way to get to them. This fix adds a min-width to the input fields and handles swatch overflow with a scrollbar.

--- a/app/code/Magento/Swatches/view/adminhtml/web/css/swatches.css
+++ b/app/code/Magento/Swatches/view/adminhtml/web/css/swatches.css
@@ -149,6 +149,15 @@
     width: 50px;
 }
 
+.col-swatch, [class^=swatch-col] {
+  min-width: 150px;
+}
+
+#swatch-text-options-panel {
+  overflow: auto;
+  width: 100%;
+}
+
 .swatches-visual-col.unavailable:after {
     content: '';
     position: absolute;
